<resources>
    <string name="app_name">WeatherZ</string>
    <string name="settings">Settings</string>
    <string name="addlocation">My Locations</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="turn_on">Please turn on Your \n LOCATIONS. \nDo You want to go to Location settings?</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="back">Back</string>
    <string name="add_location">Add location</string>
    <string name="hint">Enter new location</string>
    <string name="save">Save</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure: </string>
    <string name="max_temp">Max temp: </string>
    <string name="wind">  Wind: </string>
    <string name="cloudiness">Cloudiness: </string>
    <string name="dayinweek">Forecast for: </string>
    <string name="rain">Rain: </string>
    <string name="perc">%</string>
    <string name="ms">\u0020m/s</string>
    <string name="noInternet">No internet.</string>
    <string name="currentLocation">Current location</string>
    <string name="noLocation">Could not find address.</string>
    <string name="madeBy">App made by: \nMarjanovic Zivko</string>
    <string name="empty"></string>


    <string name="weather_settings">WeatherZ   Settings</string>
    <string name="choose_location">Choose favorite location...</string>
    <string name="locations">Locations</string>
    <string name="looking">Looking for address</string>
    <string name="sanFrancisco">San Francisco</string>
    <string name="barcelona">Barcelona</string>

    <string-array name="next_day">
        <item>"Foecast for TODAY"</item>
        <item>"Next day"</item>
        <item>"In two days"</item>
        <item>"In three days"</item>
        <item>"In four days"</item>
        <item>"In five days"</item>
        </string-array>


</resources>
